--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "node": "16"
   },
   "dependencies": {
-    "stylelint-scss": "^4.3.0",
-    "wheel-indicator": "^1.3.0"
+    "stylelint-scss": "^4.3.0"
   }
 }
